# script_contabilidad

./: .gitignore  README.md  pyproject.toml  requirements.txt
agrupacion_odoo/: README.md  constants.py  main.py
analisis_cheques/: README.md  constants.py  main.py
analitica_provedores_odoo/: README.md  constants.py  main.py  script.py
analitica_proveedores/: README.md  constants.py  main.py  plotting.py
cuenta_contable/: constants.py  main.py  plotting.py
generacion_contratos/: README.md  constants.py  main.py
generacion_pdf/: README.md  constants.py  main.py
generacion_reportes/: README.md  example.py  main.py
txt_softland/: README.md  constants.py  main.py
unir_excels_banco_estado/: README.md  main.py
